# termtet

./: CMakeLists.txt
include/: debug.h  game.h  grid.h  io.h  main.h
src/: debug.c  game.c  grid.c  io.c  main.c
